# llm21

./: .env.template  .gitignore  LICENSE  README.md  api.py  benchmark.py  blackjack.py  gemini-3-pro-preview.csv  llm.py  pyproject.toml  strategy.py  visualize.py
benchmarks/anthropic/: claude-opus-4-5-20251101.csv  claude-sonnet-4-5-20250929.csv
benchmarks/google/: gemini-3-flash-preview.csv
benchmarks/openai/: gpt-4o-mini-2024-07-18.csv  gpt-5.2-2025-12-11.csv
benchmarks/xai/: grok-4-1-fast.csv
benchmarks/zai/: glm-4-7.csv
templates/: index.html
templates/partials/: game.html  llm.html  optimal.html
